@@ -1,5 +1,7 @@
 @echo off
 setlocal
 set SCRIPT_DIR=%~dp0
-powershell -NoProfile -ExecutionPolicy Bypass -File "%SCRIPT_DIR%open_release_folder.ps1" -BuildIfMissing
+set "PS_EXE=%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe"
+if not exist "%PS_EXE%" set "PS_EXE=powershell.exe"
+"%PS_EXE%" -NoProfile -ExecutionPolicy Bypass -File "%SCRIPT_DIR%open_release_folder.ps1" -BuildIfMissing
 exit /b %ERRORLEVEL%
