@@ -2,16 +2,21 @@ param(
   [string]$OutDir = "out\release"
 )
 
+Set-StrictMode -Version Latest
 $ErrorActionPreference = "Stop"
 
 $scriptDir = Split-Path -Parent $MyInvocation.MyCommand.Path
-$repoRoot = Resolve-Path (Join-Path $scriptDir "..\..")
+$repoRoot = (Resolve-Path (Join-Path $scriptDir "..\..")).Path
 $zipScript = Join-Path $repoRoot "weftend_release_zip.ps1"
+$powershellExe = Join-Path $env:WINDIR "System32\WindowsPowerShell\v1.0\powershell.exe"
+if (-not (Test-Path -LiteralPath $powershellExe)) {
+  $powershellExe = "powershell.exe"
+}
 
-if (-not (Test-Path $zipScript)) {
+if (-not (Test-Path -LiteralPath $zipScript)) {
   Write-Error "Missing release zip script: $zipScript"
   exit 1
 }
 
-& powershell -ExecutionPolicy Bypass -File $zipScript -OutDir $OutDir
+& $powershellExe -ExecutionPolicy Bypass -File $zipScript -OutDir $OutDir
 exit $LASTEXITCODE
